--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,2 +1,6 @@
-<script src="cljs-out/dev-main.js"></script>
-<div id="app"></div>
+<html>
+  <body>
+    <div id="app"></div>
+    <script src="cljs-out/dev-main.js"></script>
+  </body>
+</html>
