--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,4 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
   <body>
     <div id="app"></div>
     <script src="cljs-out/dev-main.js"></script>
