--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-dist/public/index.html
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="cljs-out/dev-main.js"></script>
+  </body>
+</html>
