--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
   </head>
   <body>
+    <h1>Star Trek</h1>
     <div id="app"></div>
     <script src="cljs-out/dev-main.js"></script>
   </body>
