Tailwindcss; tabs terminal/source-code

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <link href="https://cdn.tailwindcdn.com/1.1.4/tailwind.min.css" rel="stylesheet">
+    <link href="tailwind-base.css" rel="stylesheet">
+    <link href="tailwind-components.css" rel="stylesheet">
+    <link href="tailwind-utilities.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Star Trek</h1>
     <div id="app"></div>
 
     <script src="cljs-out/dev-main.js"></script>
