--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link href="tailwind-base.css" rel="stylesheet">
+    <link href="tailwind-components.css" rel="stylesheet">
+    <link href="tailwind-utilities.css" rel="stylesheet">
   </head>
   <body>
-    <h1>Star Trek</h1>
     <div id="app"></div>
+
     <script src="cljs-out/dev-main.js"></script>
   </body>
 </html>
